syntax = "proto3";

option csharp_namespace = "GrpcAgent";

package GrpcAgent;

service Notifier {
	rpc Notify (NotifyRequest) returns (NotifyReply);
}

message NotifyRequest {
	string bank = 1;
	string content = 2;
}

message NotifyReply {
	bool isSuccess = 1;
}